# pdf_lab

./: .gitignore  README.md  pyproject.toml
donut/: transformers_donut.ipynb  transformers_nougat_donut.ipynb
easyocr/: img_easyocr_ex1.ipynb
img_easyocr/: img_easyocr_ex2.ipynb
img_pytesseract/: img_pytesseract_ex1.ipynb
img_transformers/: transformers_blip.ipynb  transformers_donut.ipynb
img_trocr/: transformers_donut.ipynb  transformers_models.ipynb  transformers_trocr_models_basic.ipynb  transformers_trocr_models_v2.ipynb
pdf_mathpix/: pdf_mathpix_ex1.ipynb
pdfminer/: pdf_miner_ex1.ipynb  pdf_miner_ex2.ipynb
pdfplumber/: pdf_plumber_ex1.ipynb  pdf_plumber_ex2.ipynb
pyMuPDF/: pdf_pymupdf_ex1.ipynb  pdf_pymupdf_ocr_ex3.ipynb  pdf_pymupdf_ocr_ex4.ipynb
pyPDF2/: pdf_pypdf2_ex1.ipynb  pdf_pypdf2_ex2.ipynb
pypdfium2/: pdf_pdfium2_ex1.ipynb
pytesseract/: img_pytesseract_ex2.ipynb
