[tool.poetry]
name = "pdf_lab"
version = "0.1.0"
description = ""
authors = ["Pilar Madariaga <pilar.madariaga@gft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pypdf2 = "^3.0.1"
pymupdf = "^1.25.1"
pytesseract = "^0.3.13"
pillow = "^11.0.0"
easyocr = "^1.7.2"
pdfplumber = "^0.11.4"
pdfminer = "^20191125"
pypdfium2 = "^4.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
